Fixing breadcrumb vertical alignment (#631)
* fix: chevron aligment fix

* chore: comments on the alignment

--- a/packages/components/bolt-breadcrumb/src/breadcrumb.scss
+++ b/packages/components/bolt-breadcrumb/src/breadcrumb.scss
@@ -36,6 +36,7 @@ bolt-breadcrumb {
 
     display: inline-block;
     position: relative;
+    top: -1px; // [Mai] Offsets the 1px border to align the chevron with text.
     width: bolt-v-spacing(xsmall);
     height: bolt-v-spacing(xsmall);
     content: '';
